# oculus_reader

./: .gitignore  README.md
app/: .gitignore  AndroidManifest.xml  CMakeLists.txt  README.md  Remotes.h  build.gradle  main.cpp  settings.gradle
app/java/com/rail/oculus/teleop/: MainActivity.java
app/src/: main.cpp
oculus_reader/APK/: teleop-debug.apk
